Changes in Configurations for pk

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -10,14 +10,14 @@
 
     //---- Sandbox Environment -------
 
-    "clientId": "3ade8450-a12e-480e-810f-dd4af4744263",
-    "clientSecret": "6jKNGwgppG@A0DB3xopIdxIm9jF??U?j",
+    "clientId": "3d42fdff-b78a-46bc-9bc1-0e93b4ecbf3b",
+    "clientSecret": "_2IA8un49xmBTF-F?v]JJ8kG6sa2H:6-",
     "resource": "https://vavacarssb.crm4.dynamics.com/",
     "authority": "https://login.microsoftonline.com/a52a61f9-aaaa-4a7c-b273-559840d6a1d3/oauth2/token",
     "emailSenderId": "26EB61ED-EDAE-E911-A82B-000D3AB18807",
     "liveDate": "2019-07-01",
     "timeZoneStr": "Pakistan Standard Time",
-    "baseUrl": "https://vavacarsengagementuatturkey.azurewebsites.net",
+    "baseUrl": "https://vavacarsengagementuatpakistan.azurewebsites.net",
     "appointmentStatusCancelled": "CANCELLED",
     "appointmentStatusAssigned": "ASSIGNED",
     "inspectionStatusCancelled": "Inspection Cancelled",
@@ -37,21 +37,26 @@
 
     /*
     //---- Production Environment -------
-    "clientId": "56aa6ca6-77d3-4d91-8577-1ab124484037",
-    "clientSecret": "QCAA4T:3aoRSCeIiCIpCVHEc9]rfV4+.",
+    "clientId": "a5ef38c6-54af-4d2b-9686-b99ae73f7556",
+    "clientSecret": "ZIbtzLABd[A-L9_rMfaZH=v2GzT3t46E",
     "resource": "https://vavacarslive.crm4.dynamics.com/",
     "authority": "https://login.microsoftonline.com/a52a61f9-aaaa-4a7c-b273-559840d6a1d3/oauth2/token",
-    "emailSenderId": "553FEC69-A7AC-E911-A824-000D3A289FCD",
+    "emailSenderId": "FC49B608-7B1D-EA11-A813-000D3A490C65",
     "liveDate": "2019-08-19",
     "timeZoneStr": "Turkey Standard Time",
-    "baseUrl": "https://vavacarsengagement.azurewebsites.net",
+    "baseUrl": "https://vavacarsengagementpakistan.azurewebsites.net",
     "appointmentStatusCancelled": "Cancelled",
     "appointmentStatusAssigned": "Assigned",
     "inspectionStatusCancelled": "Inspection Cancelled",
     "inspectionStatusAgreementNotSigned": "Agreement Not Signed",
     "vehiclePurchaseStatusPurchased": "Purchased",
     "vehiclePurchaseStatusAuctionCreated": "Auction Created",
-    "vehiclePurchaseStatusInTransit": "In Transit"
+    "vehiclePurchaseStatusInTransit": "In Transit",
+    "appointmentStatusNoShow": "NoShow",
+    "appointmentReasonType3": "I am unable to find the paperwork",
+    "appointmentReasonType4": "I am no longer satisfied with the valuation",
+    "appointmentReasonType8": "I was just checking what price you could offer",
+    "appointmentReasonType9": "I will book an appointment later"
     */
 
 
