Changes in Configurations for Pk

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -43,7 +43,7 @@
     "authority": "https://login.microsoftonline.com/a52a61f9-aaaa-4a7c-b273-559840d6a1d3/oauth2/token",
     "emailSenderId": "FC49B608-7B1D-EA11-A813-000D3A490C65",
     "liveDate": "2019-08-19",
-    "timeZoneStr": "Turkey Standard Time",
+    "timeZoneStr": "Pakistan Standard Time",
     "baseUrl": "https://vavacarsengagementpakistan.azurewebsites.net",
     "appointmentStatusCancelled": "Cancelled",
     "appointmentStatusAssigned": "Assigned",
@@ -67,11 +67,11 @@
     "smsT4": "Merhaba {contactname}, zaman daralıyor. Randevunuzu hemen alın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT5": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT6": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seç: Randevu alıp aracını ekspertize getir, ücretsiz kahve ve kablosuz internetin keyfini çıkar.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "templateT2": "Lead Real Time Trigger2",
-    "templateT3": "Lead Real Time Trigger3",
-    "templateT4": "Lead Real Time Trigger4",
-    "templateT5": "Lead Real Time Trigger5",
-    "templateT6": "Lead Real Time Trigger6"
+    "templateT2": "Lead Trigger2 PK",
+    "templateT3": "Lead Trigger3 PK",
+    "templateT4": "Lead Trigger4 PK",
+    "templateT5": "Lead Trigger5 PK",
+    "templateT6": "Lead Trigger6 PK"
   },
   "Opportunity": {
     "smsT1": "Randevunu kaçırdın! Yeni bir randevuyla ödemeniz anında hesabınızda!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
@@ -85,10 +85,10 @@
     "smsT5": "VavaCars randevunuz yarın. Sizi {appointmentDate} tarihinde, saat {appointmentTime}’da {centeraddress} şubemize bekliyoruz. Aracınızın ekspertiz öncesi ön değerlemesi {valuation} TL’dir. Ekspertiz sonrası bu rakam değişebilir.\nRandevu değişikliği için, 0 216 275 3877‘den veya infoturkey@vava.cars adresinden bize ulaşabilirsiniz.\nhttps://www.google.com/maps?q={centrelatitude},{centrelongitude}",
     //End Comments
     "templateT1": "Opportunity Real Time Trigger1",
-    "templateT2": "Opportunity Real Time Trigger2",
-    "templateT3": "Opportunity Real Time Trigger3",
+    "templateT2": "Opportunity Trigger5 PK",
+    "templateT3": "Opportunity Trigger7 PK",
     "templateT4": "Opportunity Real Time Trigger4",
-    "templateT5": "Opportunity Real Time Trigger-1"
+    "templateT5": "Opportunity Trigger2 PK"
 
   },
   "Prospect": {
@@ -99,19 +99,18 @@
     "smsT8": "Kilometreniz git gide artıyor olmalı...Aracınızı satmış olduğunuzu umuyoruz ama satmadıysanız da biz almaya hazırız.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT9": "Daha iyi bir teklif mi aldınız? Eğer hala daha iyi bir teklif almadıysanız, daha fazla vakit kaybetmeyin.VavaCars daima yanınızda.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT10": "Size son verdiğimiz fiyatın üzerinden 45 gün geçti. Sizlere en iyi hizmeti verebilmek ve sizi bu zorlu süreçten kurtarmak isteriz. Bize ne zaman ihtiyaç duyarsanız her zaman bir tıkla ulaşabilirsiniz. VavaCars\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "templateT2": "Prospect Real Time Trigger2",
-    "templateT4": "Prospect Real Time Trigger4",
-    "templateT5": "Prospect Real Time Trigger5",
-    "templateT6": "Prospect Real Time Trigger6",
-    "templateT8": "Prospect Real Time Trigger8",
-    "templateT9": "Prospect Real Time Trigger9",
-    "templateT10": "Prospect Real Time Trigger10"
+    "templateT2": "Prospect Trigger2 PK",
+    "templateT4": "Prospect Trigger4 PK",
+    "templateT5": "Prospect Trigger5 PK",
+    "templateT6": "Prospect Trigger6 PK",
+    "templateT8": "Prospect Trigger8 PK",
+    "templateT9": "Prospect Trigger9 PK",
+    "templateT10": "Prospect Trigger10 PK"
   },
   "Keys": {
     "EncryptionkeyLead": "VHJpZ2dlclNlcnZpY2VBcGlMZWFk",
     "EncryptionkeyOpportunity": "VHJpZ2dlclNlcnZpY2VBcGlPcHBvcnR1bml0eQ==",
-    "EncryptionkeyProspect": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdA==",
-    "EncryptionkeySMS": "U01BUlRNRVNTQUdFVVRJTElUWVNNUw=="
+    "EncryptionkeyProspect": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdA=="
   }
 
   
