PK Bussiness Unit Changes

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -30,10 +30,10 @@
     "appointmentReasonType3": "I am unable to find the paperwork",
     "appointmentReasonType4": "I am no longer satisfied with the valuation",
     "appointmentReasonType8": "I was just checking what price you could offer",
-    "appointmentReasonType9": "I will book an appointment later"
+    "appointmentReasonType9": "I will book an appointment later",
     //End Comments
 
-
+    "BussinessUnitPK": "BD6D3F1A-1FB2-E911-A83A-000D3AB18325"
 
     /*
     //---- Production Environment -------
@@ -112,6 +112,4 @@
     "EncryptionkeyOpportunity": "VHJpZ2dlclNlcnZpY2VBcGlPcHBvcnR1bml0eQ==",
     "EncryptionkeyProspect": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdA=="
   }
-
-  
 }
