addition of Bussiness Unit Guid for pk

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -57,6 +57,8 @@
     "appointmentReasonType4": "I am no longer satisfied with the valuation",
     "appointmentReasonType8": "I was just checking what price you could offer",
     "appointmentReasonType9": "I will book an appointment later"
+
+      "BussinessUnitPK": "0A1CC300-1FB2-E911-A824-000D3A43D70A"
     */
 
 
