--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -63,12 +63,13 @@
 
 
   },
+
   "Lead": {
-    "smsT2": "Merhaba {contactname}, {make} {model} aracınızın {valuation} TL değerlemesinin geçerlilik süresine 4 gün kaldı. {make} {model} aracınız için değerlememiz.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT3": "Merhaba {contactname}, {valuation} TL ile neler yapacaksın? Ödemeniz anında hesabınıza yapılacaktır.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT4": "Merhaba {contactname}, zaman daralıyor. Randevunuzu hemen alın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT5": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT6": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seç: Randevu alıp aracını ekspertize getir, ücretsiz kahve ve kablosuz internetin keyfini çıkar.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "Hey {contactname}, how will you spend {valuation} PKR? Sell your car and get money in your account in 3 quick and easy steps.\nVisit www.vava.cars or call us on 0304-1110065",
+    "smsT3": "Hey {contactname}, your online valuation is valid until today only. Book your appointment on www.vava.cars/pk and visit our inspection centre. Get Free Valuation, inspection and Secure Payment",
+    "smsT4": "Still haven't sold your car? Get a valuation for your car on www.vava.cars/pk Avoid long negotiation, risks and sell your car in 3 easy steps.",
+    "smsT5": "Hi {contactname}, Get a new valuation for your {make} Avoid long negotiation, risks and sell your car in 3 easy steps.\nGet initial valuation on www.vava.cars",
+    "smsT6": "Are you fed up trying to sell your car? Visit us and relax with free tea/coffee and wifi in one of our centres, update your valuation now on www.vava.cars/pk",
     "templateT2": "Lead Trigger2 PK",
     "templateT3": "Lead Trigger3 PK",
     "templateT4": "Lead Trigger4 PK",
@@ -77,15 +78,10 @@
   },
   "Opportunity": {
     "smsT1": "Randevunu kaçırdın! Yeni bir randevuyla ödemeniz anında hesabınızda!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    //"smsT2": "Aracını hala nakite çevirmeyi ister misin ? Aracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT2": "Aracınızı hala nakite çevirmeyi istemez miydiniz ? Aracınızı 5 gün önce nakite çevirebilir, yatırıma dönüştürebilirdiniz. Fırsat kaçmadı: Araç alım merkezlerimize bekliyoruz. VavaCars Petrol Ofisi işbirliği ile.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    //"smsT3": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT3": "Aracınız için yeni bir değerleme alabilirsiniz. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "Still want cash for your car? You could have cashed your car 4 days ago and turned it into an investment.\nYou still can. We are waiting for you at our purchase centres. In collaboration with VavaCars PSO. To book an appointmenet visit www.vava.cars or call us on 0304-1110065",
+    "smsT3": "Get a new valuation for your car. Remove the risk and hassle of selling your car privately with one of our quick, transparent appointments https://www.vava.cars/pk/value-my-car",
     "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    //Start Comments
-    // Need to Update the latest content provided from client end
-    "smsT5": "VavaCars randevunuz yarın. Sizi {appointmentDate} tarihinde, saat {appointmentTime}’da {centeraddress} şubemize bekliyoruz. Aracınızın ekspertiz öncesi ön değerlemesi {valuation} TL’dir. Ekspertiz sonrası bu rakam değişebilir.\nRandevu değişikliği için, 0 216 275 3877‘den veya infoturkey@vava.cars adresinden bize ulaşabilirsiniz.\nhttps://www.google.com/maps?q={centrelatitude},{centrelongitude}",
-    //End Comments
+    "smsT5": "We will be ready and waiting to help you sell your car tomorrow. This is a reminder for your appointment tomorrow {appointmentDate} at {appointmentTime} at {centeraddress}. To update your appointment call on 0304-1110065 or send an email on infopakistan@vava.cars.https://www.google.com/maps?q={centrelatitude},{centrelongitude}",
     "templateT1": "Opportunity Real Time Trigger1",
     "templateT2": "Opportunity Trigger5 PK",
     "templateT3": "Opportunity Trigger7 PK",
@@ -94,13 +90,13 @@
 
   },
   "Prospect": {
-    "smsT2": "Teklifimizi yeniden değerlendirebildiniz mi? Teklifimizi kabul etmeniz durumunda, aracınızı anında VavaCars'a satabilirsiniz.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT4": "Sizi yeniden görebilmeyi umuyoruz. Aracınızı satmak için daha fazla vakit kaybetmenizi istemeyiz. Anında satın ve rahatınıza bakın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT5": "Aracınız için verdiğimiz teklifimizin bugün son günü! Bugun aracınızı VavaCars'a satabilir ve anında paranızı hesabınızda görebilirsiniz. Son günü kaçırmayın!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT6": "Son görüşmemizin üzerinden 7 gün geçti...Eğer aracınızı hala satamadıysanız size yeni bir randevu verebiliriz. Tek yapmanız gereken bizi bilgilendirmek.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT8": "Kilometreniz git gide artıyor olmalı...Aracınızı satmış olduğunuzu umuyoruz ama satmadıysanız da biz almaya hazırız.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT9": "Daha iyi bir teklif mi aldınız? Eğer hala daha iyi bir teklif almadıysanız, daha fazla vakit kaybetmeyin.VavaCars daima yanınızda.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT10": "Size son verdiğimiz fiyatın üzerinden 45 gün geçti. Sizlere en iyi hizmeti verebilmek ve sizi bu zorlu süreçten kurtarmak isteriz. Bize ne zaman ihtiyaç duyarsanız her zaman bir tıkla ulaşabilirsiniz. VavaCars\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "Have you been able to think about the final price offered to you? If you accept our offer, you can immediately sell your car to VavaCars.",
+    "smsT4": "We hope to see you again. We don't want you to waste any more time selling your car. Sell your car instantly and feel at ease.",
+    "smsT5": "Last day for your offer is coming up! Selll your car to VavaCars today and instantly see money in your account. Offer is valid for 2 more days!",
+    "smsT6": "7 days have passed since our last meeting...If you still haven't sold your car, we can give you a new appointment.\nAll you have to do is inform us. Visit www.vava.cars",
+    "smsT8": "Is your mileage getting too high? We hope you have sold your car, if you haven't, we are here to help you!",
+    "smsT9": "Did you get a better offer? If you still don't have a better offer, don't waste any more time. VavaCars is always with you.",
+    "smsT10": "45 days passed over the last given price. We would like to provide you with the best service and save you from this hassle. You can always reach us with a click whenever you need us. VavaCars",
     "templateT2": "Prospect Trigger2 PK",
     "templateT4": "Prospect Trigger4 PK",
     "templateT5": "Prospect Trigger5 PK",
