--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -30,9 +30,10 @@
     "appointmentReasonType3": "I am unable to find the paperwork",
     "appointmentReasonType4": "I am no longer satisfied with the valuation",
     "appointmentReasonType8": "I was just checking what price you could offer",
-    "appointmentReasonType9": "I will book an appointment later"
+    "appointmentReasonType9": "I will book an appointment later",
     //End Comments
 
+    "BussinessUnitTR": "C4F62721-1FB2-E911-A83A-000D3AB18325"
 
 
     /*
