Configurations Update for BU TR

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -33,9 +33,11 @@
     "appointmentReasonType9": "I will book an appointment later",
     //End Comments
     */
+    // For Sandbox
+    // "BussinessUnitTR": "C4F62721-1FB2-E911-A83A-000D3AB18325"
 
-    "BussinessUnitTR": "C4F62721-1FB2-E911-A83A-000D3AB18325"
-
+    //For Prod
+    "BussinessUnitTR": "2FF6BC06-1FB2-E911-A824-000D3A43D70A",
 
     //---- Production Environment -------
     "clientId": "56aa6ca6-77d3-4d91-8577-1ab124484037",
