--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -9,7 +9,7 @@
   "AzureCRM": {
 
     //---- Sandbox Environment -------
-
+    /*
     "clientId": "3d42fdff-b78a-46bc-9bc1-0e93b4ecbf3b",
     "clientSecret": "_2IA8un49xmBTF-F?v]JJ8kG6sa2H:6-",
     "resource": "https://vavacarssb.crm4.dynamics.com/",
@@ -34,8 +34,8 @@
     //End Comments
 
     "BussinessUnitPK": "BD6D3F1A-1FB2-E911-A83A-000D3AB18325"
-
-    /*
+    */
+    
     //---- Production Environment -------
     "clientId": "a5ef38c6-54af-4d2b-9686-b99ae73f7556",
     "clientSecret": "ZIbtzLABd[A-L9_rMfaZH=v2GzT3t46E",
@@ -56,10 +56,10 @@
     "appointmentReasonType3": "I am unable to find the paperwork",
     "appointmentReasonType4": "I am no longer satisfied with the valuation",
     "appointmentReasonType8": "I was just checking what price you could offer",
-    "appointmentReasonType9": "I will book an appointment later"
-
-      "BussinessUnitPK": "0A1CC300-1FB2-E911-A824-000D3A43D70A"
-    */
+    "appointmentReasonType9": "I will book an appointment later",
+    
+    "BussinessUnitPK": "0A1CC300-1FB2-E911-A824-000D3A43D70A"
+   
 
 
   },
