--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -65,7 +65,7 @@
   },
 
   "Lead": {
-    "smsT2": "Hey {contactname}, how will you spend {valuation} PKR? Sell your car and get money in your account in 3 quick and easy steps.\nVisit www.vava.cars or call us on 0304-1110065",
+    "smsT2": "Hey {contactname}, how will you spend {valuation} PKR? Sell your car and get money in your account in 3 quick and easy steps.\nVisit www.vava.cars/pk  or call us on 0304-1110065",
     "smsT3": "Hey {contactname}, your online valuation is valid until today only. Book your appointment on www.vava.cars/pk and visit our inspection centre. Get Free Valuation, inspection and Secure Payment",
     "smsT4": "Still haven't sold your car? Get a valuation for your car on www.vava.cars/pk. Avoid long negotiation, risks and sell your car in 3 easy steps.",
     "smsT5": "Hi {contactname}, Get a new valuation for your {make}. Avoid long negotiation, risks and sell your car in 3 easy steps.\nGet initial valuation on www.vava.cars/pk",
@@ -81,7 +81,7 @@
     "smsT2": "Still want cash for your car? You could have cashed your car 4 days ago and turned it into an investment.\nYou still can. We are waiting for you at our purchase centres. In collaboration with VavaCars PSO. To book an appointmenet visit www.vava.cars/pk or call us on 0304-1110065",
     "smsT3": "Get a new valuation for your car. Remove the risk and hassle of selling your car privately with one of our quick, transparent appointments https://www.vava.cars/pk/value-my-car",
     "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT5": "We will be ready and waiting to help you sell your car tomorrow. This is a reminder for your appointment tomorrow {appointmentDate} at {appointmentTime} at {centeraddress}. To update your appointment call on 0304-1110065 or send an email on infopakistan@vava.cars.https://www.google.com/maps?q={centrelatitude},{centrelongitude}",
+    "smsT5": "We will be ready and waiting to help you sell your car tomorrow. This is a reminder for your appointment tomorrow {appointmentDate} at {appointmentTime} at {centeraddress}. To update your appointment call on 0304-1110065 or send an email on infopakistan@vava.cars.\nhttps://www.google.com/maps?q={centrelatitude},{centrelongitude}",
     "templateT1": "Opportunity Real Time Trigger1",
     "templateT2": "Opportunity Trigger5 PK",
     "templateT3": "Opportunity Trigger7 PK",
