Sms Text Changes

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -66,7 +66,7 @@
 
   "Lead": {
     "smsT2": "Hey {contactname}, how will you spend {valuation} PKR? Sell your car and get money in your account in 3 quick and easy steps.\nVisit www.vava.cars/pk  or call us on 0304-1110065",
-    "smsT3": "Hey {contactname}, your online valuation is valid until today only. Book your appointment on www.vava.cars/pk and visit our inspection centre. Get Free Valuation, inspection and Secure Payment",
+    "smsT3": "Hey {contactname}, your online valuation is valid until today only. Book your appointment on www.vava.cars/pk and visit our Purchase Centre. Get Free Valuation, inspection and Secure Payment",
     "smsT4": "Still haven't sold your car? Get a valuation for your car on www.vava.cars/pk. Avoid long negotiation, risks and sell your car in 3 easy steps.",
     "smsT5": "Hi {contactname}, Get a new valuation for your {make}. Avoid long negotiation, risks and sell your car in 3 easy steps.\nGet initial valuation on www.vava.cars/pk",
     "smsT6": "Are you fed up trying to sell your car? Visit us and relax with free tea/coffee and wifi in one of our centres, update your valuation now on www.vava.cars/pk",
