Lead SOP Implementation

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -58,16 +58,18 @@
 
   },
   "Lead": {
-    "smsT2": "Merhaba {contactname}, {make} {model} aracınızın {valuation} TL değerlemesinin geçerlilik süresine 4 gün kaldı. {make} {model} aracınız için değerlememiz.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT3": "Merhaba {contactname}, {valuation} TL ile neler yapacaksın? Ödemeniz anında hesabınıza yapılacaktır.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT4": "Merhaba {contactname}, zaman daralıyor. Randevunuzu hemen alın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT5": "Aracın için yeni bir değerleme alabilirsin. Uzun süren ve zahmetli satış zorluğundan kaçının: Riskleri ortadan kaldırın, aracınız için hızlı ve şeffaf bir randevu oluşturun.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT6": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seç: Randevu alıp aracını ekspertize getir, ücretsiz kahve ve kablosuz internetin keyfini çıkar.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "templateT2": "Lead Real Time Trigger2",
-    "templateT3": "Lead Real Time Trigger3",
-    "templateT4": "Lead Real Time Trigger4",
-    "templateT5": "Lead Real Time Trigger5",
-    "templateT6": "Lead Real Time Trigger6"
+    "smsT2": "Merhaba {contactname}, randevunu oluşturabilirsin. {make} {model} aracınız için değerlememiz\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT3": "Merhaba {contactname}, {valuation} TL ile neler yapmayı düşünüyorsunuz? Ödemeniz anında ve güvenli şekilde yapılacaktır!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT4": "Merhaba {contactname}, {make}{model} aracınızın {valuation} TL değerlemesinin geçerlilik süresinin bitmesine 4 gün kaldı. Aracınızı zahmetsizce hemen satın!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT5": "Merhaba {contactname}, zamanınız daralıyor. Randevunuzu hemen alın!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT6": "Merhaba {contactname}, hala aracınızı satmak istiyor musunuz? Yeni değerlemeniz 60 saniye içinde hazır!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT7": "Almış olduğunuz değerleme üzerinden 30 gün geçti. Paranız anında hesabınızda!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "templateT2": "Lead Trigger2 TR",
+    "templateT3": "Lead Trigger3 TR",
+    "templateT4": "Lead Trigger4 TR",
+    "templateT5": "Lead Trigger5 TR",
+    "templateT6": "Lead Trigger6 TR",
+    "templateT7": "Lead Trigger7 TR"
   },
   "Opportunity": {
     "smsT1": "Randevunu kaçırdın! Yeni bir randevuyla ödemeniz anında hesabınızda!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
