SMS Content Changes

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -58,7 +58,7 @@
 
   },
   "Lead": {
-    "smsT2": "Merhaba {contactname}, randevunu oluşturabilirsin. {make} {model} aracınız için değerlememiz.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
+    "smsT2": "Merhaba {contactname}, randevunu oluşturabilirsin. {make} {model} aracınız için değerlememiz {valuation} TL.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT3": "Merhaba {contactname}, {valuation} TL ile neler yapmayı düşünüyorsunuz? Ödemeniz anında ve güvenli şekilde yapılacaktır!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT4": "Merhaba {contactname}, {make}{model} aracınızın {valuation} TL değerlemesinin geçerlilik süresinin bitmesine 4 gün kaldı. Aracınızı zahmetsizce hemen satın!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
     "smsT5": "Merhaba {contactname}, zamanınız daralıyor. Randevunuzu hemen alın!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
