Pk Lead SOP Changes

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -65,16 +65,18 @@
   },
 
   "Lead": {
-    "smsT2": "Hey {contactname}, how will you spend {valuation} PKR? Sell your car and get money in your account in 3 quick and easy steps.\nVisit www.vava.cars  or call us on 0304-1110065",
-    "smsT3": "Hey {contactname}, your online valuation is valid until today only. Book your appointment on www.vava.cars and visit our Purchase Centre. Get Free Valuation, inspection and Secure Payment",
-    "smsT4": "Still haven't sold your car? Get a valuation for your car on www.vava.cars. Avoid long negotiation, risks and sell your car in 3 easy steps.",
-    "smsT5": "Hi {contactname}, Get a new valuation for your {make}. Avoid long negotiation, risks and sell your car in 3 easy steps.\nGet initial valuation on www.vava.cars",
-    "smsT6": "Are you fed up trying to sell your car? Visit us and relax with free tea/coffee and wifi in one of our centres, update your valuation now on www.vava.cars",
+    "smsT2": "Hi {contactname}, you can make an appointment on www.vava.cars or call us on 0304 1110065. Our valuation for your {make} {model}.\nhttps://pk.vava.cars/39x5N8s",
+    "smsT3": "Hi {contactname}, how will you spend {valuation} PKR? We will transfer your payment quickly and securely!\nhttps://pk.vava.cars/38sieSU",
+    "smsT4": "Hi {contactname}, 4 days left on your valuation of {valuation} PKR for your {make}{model}. Sell your car hassle free and instantly!\nhttps://pk.vava.cars/3byVItn",
+    "smsT5": "Hi {contactname}, time is running out... Book your appointment today by visiting www.vava.cars or call us on 0304 1110065.\nhttps://pk.vava.cars/2HpBCUO",
+    "smsT6": "Hi {contactname}, still want to sell your car? Get a new valuation in less than 60 seconds.\nhttps://pk.vava.cars/3bBgWab",
+    "smsT7": "30 days have passed to your car valuation. Your money can be paid quickly into your account!\nhttps://pk.vava.cars/2uNsoia",
     "templateT2": "Lead Trigger2 PK",
     "templateT3": "Lead Trigger3 PK",
     "templateT4": "Lead Trigger4 PK",
     "templateT5": "Lead Trigger5 PK",
-    "templateT6": "Lead Trigger6 PK"
+    "templateT6": "Lead Trigger6 PK",
+    "templateT7": "Lead Trigger7 PK"
   },
   "Opportunity": {
     "smsT1": "Randevunu kaçırdın! Yeni bir randevuyla ödemeniz anında hesabınızda!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
