sms content & live date changes

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -35,14 +35,14 @@
 
     "BussinessUnitPK": "BD6D3F1A-1FB2-E911-A83A-000D3AB18325"
     */
-    
+
     //---- Production Environment -------
     "clientId": "a5ef38c6-54af-4d2b-9686-b99ae73f7556",
     "clientSecret": "ZIbtzLABd[A-L9_rMfaZH=v2GzT3t46E",
     "resource": "https://vavacarslive.crm4.dynamics.com/",
     "authority": "https://login.microsoftonline.com/a52a61f9-aaaa-4a7c-b273-559840d6a1d3/oauth2/token",
     "emailSenderId": "FC49B608-7B1D-EA11-A813-000D3A490C65",
-    "liveDate": "2020-01-13",
+    "liveDate": "2020-06-01",
     "timeZoneStr": "Pakistan Standard Time",
     "baseUrl": "https://vavacarsengagementpakistan.azurewebsites.net",
     "appointmentStatusCancelled": "Cancelled",
@@ -57,9 +57,9 @@
     "appointmentReasonType4": "I am no longer satisfied with the valuation",
     "appointmentReasonType8": "I was just checking what price you could offer",
     "appointmentReasonType9": "I will book an appointment later",
-    
+
     "BussinessUnitPK": "0A1CC300-1FB2-E911-A824-000D3A43D70A"
-   
+
 
 
   },
@@ -80,10 +80,10 @@
   },
   "Opportunity": {
     "smsT1": "Randevunu kaçırdın! Yeni bir randevuyla ödemeniz anında hesabınızda!\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT2": "Still want cash for your car? You could have cashed your car 4 days ago and turned it into an investment.\nYou still can. We are waiting for you at our purchase centres. In collaboration with VavaCars PSO. To book an appointmenet visit www.vava.cars or call us on 0304-1110065",
-    "smsT3": "Get a new valuation for your car. Remove the risk and hassle of selling your car privately with one of our quick, transparent appointments https://www.vava.cars/pk/value-my-car",
+    "smsT2": "Still want cash for your car? You could have cashed your car 4 days ago and turned it into an investment.\nYou still can. We are waiting for you at our purchase centres. To book an appointmenet visit www.vava.cars or call us on 0304-1110065.\nWe only cater to one customer at a time, practice social distancing and ensure the safest possible environment.\nYour safety is our priority!\nhttp://bit.ly/35hPsTe",
+    "smsT3": "Get a new valuation for your car. Remove the risk and hassle of selling your car privately with one of our quick, transparent appointments https://www.vava.cars/pk/value-my-car \nWe only cater to one customer at a time, practice social distancing and ensure the safest possible environment.\nYour safety is our priority!\nhttp://bit.ly/2rF7IY7",
     "smsT4": "Aracını satmayı denemekten bunaldın mı? Rahat ve konforlu araç alım merkezimizden birini seçin: Randevunuzu alıp aracınınızı ekspertize getirin, ücretsiz kahve ve kablosuz internetin keyfini çıkarın.\nSMS almak istemiyorsanız 'RED VAVA' yazıp 3607'ye iletebilirsiniz. Mersis:0924079386900001",
-    "smsT5": "We will be ready and waiting to help you sell your car tomorrow. This is a reminder for your appointment tomorrow {appointmentDate} at {appointmentTime} at {centeraddress}. To update your appointment call on 0304-1110065 or send an email on infopakistan@vava.cars.\nLocation: https://goo.gl/maps/hxE7FSnLeXDVUrvL8",
+    "smsT5": "We will be ready and waiting to help you sell your car tomorrow. This is a reminder for your appointment tomorrow {appointmentDate} at {appointmentTime} at {centeraddress}. To update your appointment call on 0304-1110065 or send an email on infopakistan@vava.cars.\nLocation: https://goo.gl/maps/hxE7FSnLeXDVUrvL8 \nWe only cater to one customer at a time, practice social distancing and ensure the safest possible environment.\nYour safety is our priority!\nhttp://bit.ly/2PA8uO8",
     "templateT1": "Opportunity Real Time Trigger1",
     "templateT2": "Opportunity Trigger5 PK",
     "templateT3": "Opportunity Trigger7 PK",
