FetchingData from  Mysql & Pushing in CRM (POC)

--- a/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
+++ b/source/Vitol.Enzo.CRM.API.TriggerService/appsettings.json
@@ -109,9 +109,13 @@
     "EncryptionkeyLead": "VHJpZ2dlclNlcnZpY2VBcGlMZWFk",
     "EncryptionkeyOpportunity": "VHJpZ2dlclNlcnZpY2VBcGlPcHBvcnR1bml0eQ==",
     "EncryptionkeyProspect": "VHJpZ2dlclNlcnZpY2VBcGlQcm9zcGVjdA==",
-    "EncryptionkeySMS": "U01BUlRNRVNTQUdFVVRJTElUWVNNUw=="
+    "EncryptionkeySMS": "U01BUlRNRVNTQUdFVVRJTElUWVNNUw==",
+    "EncriptionKeyAuction": "VHJpZ2dlclNlcnZpY2VBcGlBdWN0aW9u"
   },
-
+  "ConnectionStrings": 
+    {
+    "DefaultConnection": "Server=srv-db-enzo-qa-turkey.mysql.database.azure.com; Port=3306; Database= enzodb;Uid=enzodbadminqa@srv-db-enzo-qa-turkey; Pwd=Vitol@SL!20181225QA;"
+  },
   "SmartMessageAPI": "https://api2.smartmessage-engage.com/SENDSMS",
   "ERRORSMS": "<SENDSMSRSP><RTCD>0</RTCD><EXP>{Exception}></EXP><TOTALCOUNT>1</TOTALCOUNT><SUCCESSCOUNT>0</SUCCESSCOUNT><FAILEDCOUNT>1</FAILEDCOUNT></SENDSMSRSP>"
 }
