--- a/source/Vitol.Enzo.CRM.Infrastructure/Vitol.Enzo.CRM.Infrastructure.csproj
+++ b/source/Vitol.Enzo.CRM.Infrastructure/Vitol.Enzo.CRM.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.21" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="RestSharp" Version="106.6.10" />
   </ItemGroup>
